--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="assets/hiveupme.png">
     <title>HIVE/USDT Prices</title>
     <script src="./libs/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link href="./libs/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
